# SDL2_image

./: CMakeLists.txt  IMG_bmp.c  IMG_gif.c  IMG_jpg.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_tga.c  IMG_tif.c  IMG_webp.c  IMG_xcf.c  SDL_image.h  ignore.bii  showimage.c
bii/: bii_adapt_code.py  dependencies.bii  parents.bii  requirements.bii
